# VSC-INSTALLER-PLUS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Installer.cpp  Installer.h  LauncherCreator.cpp  LauncherCreator.h  MainWindow.cpp  MainWindow.h  main.cpp
ui/: MainWindow.ui
